Fixing some small Spacing and sizing problems

--- a/style.css
+++ b/style.css
@@ -265,12 +265,16 @@ body{
         width: 80%; 
         height: 45px;
         display: block;
+        margin-left: auto;
+        margin-right: auto;
         border: 2px solid lightgray;
     }
     
     #ll{   
         width: 53px; height: 44px;
-        margin-top: 20px;
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 #leftImage{
